# jcbb

./: CMakeLists.txt  README.md  jcbb.cpp  main.cpp  testing.cpp
include/: MarginalMocks.h  MarginalWrappers.h  Marginals.h  file_parser.h  jcbb.h
include/jcbb/: Hypothesis.h  bearing_range_factor.h  compatability.h  jcbb.h
src/: Hypothesis.cpp  MarginalWrappers.cpp  Marginals.cpp  compatability.cpp  file_parser.cpp  jcbb.cpp  utils.cpp
testing/: alpha2.txt  matrix.txt
testing/test1/: S.txt  abest.txt  z.txt  zbar.txt
testing/test2/: S.txt  abest.txt  z.txt  zbar.txt
testing/test3/: S.txt  abest.txt  z.txt  zbar.txt
testing/test4/: S.txt  abest.txt  z.txt  zbar.txt
testing/test5/: S.txt  abest.txt  z.txt  zbar.txt
xPtests/test_sim/: H.txt  P.txt  S.txt  a.txt  eta.txt  nis.txt  z.txt  zpred.txt
xPtests/test_vp/: H.txt  P.txt  S.txt  a.txt  eta.txt  nis.txt  sensorOffset.txt  z.txt  zpred.txt
